--- a/src/Navigation/footer.css
+++ b/src/Navigation/footer.css
@@ -5,3 +5,23 @@ html, body{
     padding: 0;
     overflow-x: hidden;
 }
+
+@media screen and (max-width: 393px) {
+    .cod-payment{
+       margin-bottom: 5px;
+    }
+
+    .gcash-payment{
+        margin-left: -60px;
+    }
+}
+
+@media screen and (min-width: 393px) {
+    .cod-payment{
+       margin-bottom: 5px;
+    }
+
+    .gcash-payment{
+        margin-left: -60px;
+    }
+}
